		Further reconciling the Makefiles between the 1991 and 2021 translations.
2021/10/09	Rolling back the database file format in C1991 to the format in the Fortran version:
		‟dtextc.dat” is being split back into ‟dindx.dat” and ‟dtext.dat”.
		This will break compatibility with the version of Zork distributed by Linux,
		but it requires only splitting the files at the location given by ‟mrloc” originally in the 1991 C translation.
2021/10/12	Reformatting dindx.txt in the Fortran and 2021 C translation to more closely match the 1991 C translation.
		The rdesc2 pointer to an array of messages in the room table has been changed into an array of message pointers.
2021/10/12	Resizing the message table rtext[] and formatting dindx.txt (in the 2021 C translation and Fortran version).
		This will be re-visited later, when the strings table is re-formatted.
2021/10/12	Normalized the format of the database index file dindx.dat.
		Moved the version number for the 1991 C translation up to 2.8A.
2021/10/13	Reconciling conditional code.
2021/10/13	Updating the database decompiler: to bring out the references to absolute locations in the story file.
2021/10/14	Reconciling the randomizer (the first of two rounds).
		This will introduce variability of output in the 1991 translation, which arises, in part, from the use of srand().
		Therefore, ‟make test” will not always produce an exact match for test outputs anymore.
		This will be fixed for both C translations and the Fortran version later, when they are fully reconciled.
2021/10/14-15	Normalizing the record format in the story file (the first of two rounds).
2021/10/21	Revising the database decompiler to better reflect the structure of the exit table.
2021/10/23	Reconciling and upgrading the random number generator.
2021/10/24-25	Reconciling and upgrading the time-related functions and reseeding the random number generator with it.
		This changes the format of the ‟dsave.dat” game-state file.